# numbat-cgo

./: Cargo.toml  README.md  go.mod  numbat.go  numbat_test.go
.github/workflows/: build-libs.yml
cmd/example/: main.go
src/: lib.rs
